* Bug #34019: Better handling of license validation errors
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49013 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-16) unstable; urgency=low
+
+  * Bug #34019: Better handling of license validation errors
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 03 Apr 2014 12:35:38 +0200
+
 univention-management-console-module-adtakeover (1.0.10-15) unstable; urgency=medium
 
   * import license_check to fix unused undefined function calls (Bug #34139)
