--- a/management/univention-management-console-module-adtakeover/umc/js/de.po
+++ b/management/univention-management-console-module-adtakeover/umc/js/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: univention-management-console-module-reboot\n"
 "Report-Msgid-Bugs-To: packages@univention.de\n"
-"POT-Creation-Date: 2014-02-24 17:22+0100\n"
+"POT-Creation-Date: 2014-04-03 11:49+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: umc/js/adtakeover.js:102
+#: umc/js/adtakeover.js:111
 msgid ""
 "<p>A <i>{ad_os}</i> Active Directory domain with the domainname <i>"
 "{ad_domain}</i> has been found. The server <i>{ad_hostname} ({ad_ip})</i> "
@@ -23,72 +23,85 @@ msgid ""
 msgstr ""
 "Es wurde eine <i>{ad_os}</i> Active Directory-Domäne mit dem Domänennamen <i>"
 "{ad_domain}</i> gefunden. Der Server <i>{ad_hostname} ({ad_ip})</i> wird für "
-"die Übernahme als Active Directory Domänencontroller benutzt werden. The "
+"die Übernahme als Active Directory Domänencontroller benutzt werden. Die "
 "folgenden Konten wurden in der Active Directory-Domäne gefunden:<ul><li>"
 "{users} Benutzer</li><li>{groups} Gruppen</li><li>{computers} Rechner</li></"
 "ul>Klicken Sie auf \"Weiter\", um die Übernahme zu starten."
 
-#: umc/js/adtakeover.js:112
+#: umc/js/adtakeover.js:75
+msgid ""
+"<p>A previous Active Directory takeover was detected.</p><p>In order to "
+"start another takeover process, click \"Next\".</p>"
+msgstr ""
+"<p>Ein bereits durchgeführter Active Directory Takeover wurde erkannt. Um "
+"eine neue Übernahme zu starten, klicken Sie auf \"Weiter\".</p>"
+
+#: umc/js/adtakeover.js:122
 msgid ""
 "<p>All Windows domain accounts have been successfully transfered.</p><p>As "
 "next step, group policies must be copied from the Active Directory SYSVOL "
 "share to Univention Corporate Server. We recommend using robocopy from a "
 "Windows client or Windows server which is joined to the domain:</p>"
 msgstr ""
-"<p>Alle Windows-Domänen-Konten wurden erfolgreich übernommen.</p><p>"
-"Als nächster Schritt müssen nun die Gruppenrichtlinien von der "
-"Active Directory SYSVOL-Freigabe auf Univention Corporate Server kopiert "
-"werden. Wir empfehlen dafür robocopy von einem Windows Client oder einem Windows "
-"Server, der der Domäne beigetreten ist, aus zu nutzen:"
+"<p>Alle Windows-Domänen-Konten wurden erfolgreich übernommen.</p><p>Als "
+"nächster Schritt müssen nun die Gruppenrichtlinien von der Active Directory "
+"SYSVOL-Freigabe auf Univention Corporate Server kopiert werden. Wir "
+"empfehlen dafür robocopy von einem Windows Client oder einem Windows Server "
+"aus zu nutzen, der der Domäne beigetreten ist:"
 
-#: umc/js/adtakeover.js:130
+#: umc/js/adtakeover.js:140
 msgid ""
 "<p>Congratulations, the Active Directory Takeover wizard has been "
 "successfully completed and all Windows domain accounts have been transfered "
 "to Univention Corporate Server.</p><p>The domain is now ready for usage "
 "without any further changes.</p>"
 msgstr ""
-"<p>Herzlichen Glückwunsch, der Active Directory Takeover-Assistent wurde erfolgreich "
-"abgeschlossen und alle Windows-Domänen-Konten wurden nach Univention Corporate Server übernommen.</p>"
-"<p>Die Domäne kann nun ohne weitere Änderung in Gebrauch genommen werden.</p>"
+"<p>Herzlichen Glückwunsch, der Active Directory Takeover-Assistent wurde "
+"erfolgreich abgeschlossen und alle Windows-Domänen-Konten wurden nach "
+"Univention Corporate Server übernommen.</p><p>Die Domäne kann nun ohne "
+"weitere Änderung in Gebrauch genommen werden.</p>"
 
-#: umc/js/adtakeover.js:121
+#: umc/js/adtakeover.js:131
 msgid ""
 "<p>The group policies have been transfered successfully.</p><p>In order to "
 "complete the takeover process, all previous Active Directory Domain "
 "Controllers need to be switched off now. Click \"Next\" as soon as all "
 "Domain Controllers are shutdown completely.</p>"
 msgstr ""
-"<p>Die Gruppenrichtlinien wurden erfolgreich übernommen.</p>"
-"<p>Um den Übernahmeprozess abzuschließen, müssen nun alle bisherigen Active "
-"Directory Domänencontroller ausgeschaltet werden. Klicken Sie auf \"Weiter\""
-"sobald alle Domänencontroller komplett herunter gefahren sind.</p>"
+"<p>Die Gruppenrichtlinien wurden erfolgreich übernommen.</p><p>Um den "
+"Übernahmeprozess abzuschließen, müssen nun alle bisherigen Active Directory "
+"Domänencontroller ausgeschaltet werden. Klicken Sie auf \"Weiter\", sobald "
+"alle Domänencontroller komplett herunter gefahren sind.</p>"
 
-#: umc/js/adtakeover.js:86
+#: umc/js/adtakeover.js:95
 msgid "Active Directory Administrator account"
 msgstr "Active Directory Administratorkonto"
 
-#: umc/js/adtakeover.js:92
+#: umc/js/adtakeover.js:101
 msgid "Active Directory Administrator password"
 msgstr "Active Directory Administratorpasswort"
 
-#: umc/js/adtakeover.js:126
+#: umc/js/adtakeover.js:136
 msgid "Completion of the Active Directory Takeover"
 msgstr "Ende des Active Directory Takeover"
 
-#: umc/js/adtakeover.js:97
+#: umc/js/adtakeover.js:106
 msgid "Import statistics"
 msgstr "Importstatistiken"
 
-#: umc/js/adtakeover.js:81
+#: umc/js/adtakeover.js:90
 msgid "Name or address of the Domain Controller"
 msgstr "Name oder Adresse des Domänencontrollers"
 
-#: umc/js/adtakeover.js:117
+#: umc/js/adtakeover.js:71
+msgid "Previous takeover detected"
+msgstr "Vorherige Übernahme erkannt"
+
+#: umc/js/adtakeover.js:127
 msgid "Takeover of the Windows domain"
 msgstr "Übernahme der Windows-Domäne"
 
-#: umc/js/adtakeover.js:76
+#: umc/js/adtakeover.js:85
 msgid ""
 "This module guides the migration from a Windows Active Directory domain to "
 "Univention Corporate Server. All user, group and computer accounts along "
@@ -98,26 +111,14 @@ msgid ""
 msgstr ""
 "Dieses Modul führt durch die Migration einer Active Directory-Domäne hin zu "
 "Univention Corporate Server. Alle Benutzer-, Gruppen- und Rechnerkonten "
-"zusammen mit ihren Passwörtern und Gruppenrichtlinien werden übernommen. Nach der Migration "
-"werden die Windows-Clients direkt funktionsfähig sein, ohne der Domäne nocheinmal beitreten zu "
-"müssen."
+"zusammen mit ihren Passwörtern und Gruppenrichtlinien werden übernommen. "
+"Nach der Migration werden die Windows-Clients direkt funktionsfähig sein, "
+"ohne der Domäne noch einmal beitreten zu müssen."
 
-#: umc/js/adtakeover.js:107
+#: umc/js/adtakeover.js:117
 msgid "Transfer of group policies"
 msgstr "Übernahme der Gruppenrichtlinien"
 
-#: umc/js/adtakeover.js:71
+#: umc/js/adtakeover.js:80
 msgid "Windows domain authentication"
 msgstr "Windows-Domänen-Authentifizierung"
-
-#~ msgid ""
-#~ "The Active Directory Takeover process has been finished. Univention "
-#~ "Corporate Server has taken control over the windows domain. The windows "
-#~ "clients do not need to be joined again."
-#~ msgstr ""
-
-#~ msgid ""
-#~ "The group policies have been copied. All previous Active Directory domain "
-#~ "controllers need to be switched off now."
-#~ msgstr ""
-
