* Bug #33990: update to Dojo 1.9.3; fix detection of IE11
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49018 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-25) unstable; urgency=low
+
+  * Bug #33990: update to Dojo 1.9.3; fix detection of IE11
+
+ -- Florian Best <best@univention.de>  Thu, 03 Apr 2014 13:14:40 +0200
+
 univention-management-console-frontend (3.0.152-24) unstable; urgency=low
 
   * Bug #34005: Set Apache's ProxyTimeout to the UCR variable
