--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,13 @@
+ucs-test (4.0.164-22) unstable; urgency=medium
+
+  * Add 41samba-tool_user_password_change (Bug #34447)
+  * Rename 41password_change to 41samba-tool_user_setpassword
+  * Modify the kpasswd_change_pwd.py script to support simple
+    user initiated kpasswd changes
+  * reduce the dummy-output of univention-ldapsearch tests to the minimum
+
+ -- Arvid Requate <requate@univention.de>  Thu, 03 Apr 2014 20:21:17 +0200
+
 ucs-test (4.0.164-21) unstable; urgency=low
 
   * 10_ldap/49replication_modrdn_with_previous_modification: modify and
