* Bug #23765: The "default" attribute of an UDM object's property is now configurable via UCR.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49056 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.75-20) unstable; urgency=low
+
+  * Bug #23765: The "default" attribute of an UDM object's property is now
+    configurable via UCR.
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 03 Apr 2014 23:57:38 +0200
+
 univention-directory-manager-modules (9.0.75-19) unstable; urgency=medium
 
   * fix list append (Bug #34421)
