* Bug #34038: Changed wording for LDAP object type widget
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49074 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.97-21) unstable; urgency=low
+
+  * Bug #34038: Changed wording for LDAP object type widget
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 04 Apr 2014 11:20:29 +0200
+
 univention-management-console-module-udm (4.0.97-20) unstable; urgency=low
 
   * Bug #23765: Revert. Mixed up bug numbers
