*removed system role in 52/175* tests  *added if __name__ == '__main__' where missing  *optimized functions in dnstests.py (Bug #29211)  *added 52/175sync_create_dns_pointer_record (Bug #29211)  *modified 52/176sync_rename* , tests are now also checking is surname is   correct (Bug #31324)  *corrected typo in dnstests.py
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49085 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,15 @@
+ucs-test (4.0.164-23) unstable; urgency=low
+
+  *removed system role in 52/175* tests
+  *added if __name__ == '__main__' where missing
+  *optimized functions in dnstests.py
+  *added 52/175sync_create_dns_pointer_record
+  *modified 52/176sync_rename* , tests are now also checking is surname is
+   correct
+  *corrected typo in dnstests.py
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 04 Apr 2014 14:40:37 +0200
+
 ucs-test (4.0.164-22) unstable; urgency=medium
 
   * Add 41samba-tool_user_password_change (Bug #34447)
