--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.164-24) unstable; urgency=low
+
+  * Add _60_umc-system/10_umc-service-list (Bug #34445)
+
+ -- Dmitry Galkin <dgalkin@univention.de>  Fri, 04 Apr 2014 17:19:07 +0200
+
 ucs-test (4.0.164-23) unstable; urgency=low
 
   *removed system role in 52/175* tests
