added mail/postfix/ldaptable/tlsrequirecert (Bug #34198)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49101 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (8.0.11-2) unstable; urgency=low
+
+  * added mail/postfix/ldaptable/tlsrequirecert (Bug #34198) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 07 Apr 2014 10:15:05 +0200
+
 univention-mail-postfix (8.0.11-1) unstable; urgency=low
 
   * added mail/postfix/ldaptable/starttls to configure
