* Bug #23765: Fixed missing attribute check in patch
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49104 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-21) unstable; urgency=low
+
+  * Bug #23765: Fixed missing attribute check in patch
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 07 Apr 2014 11:06:45 +0200
+
 univention-directory-manager-modules (9.0.75-20) unstable; urgency=low
 
   * Bug #23765: The "default" attribute of an UDM object's property is now
