* Bug #34201: Removed dependeny on univention-ldap-server
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49120 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-22) unstable; urgency=low
+
+  * Bug #34201: Removed dependeny on univention-ldap-server
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 07 Apr 2014 14:14:40 +0200
+
 univention-directory-manager-modules (9.0.75-21) unstable; urgency=low
 
   * Bug #23765: Fixed missing attribute check in patch
