--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-24) unstable; urgency=low
+
+  * version bump (Bug #33843)
+
+ -- Lukas Walter <walter@univention.de>  Mon, 07 Apr 2014 15:59:56 +0200
+
 univention-directory-manager-modules (9.0.75-23) unstable; urgency=low
 
   * fixed tracebacks which could occur when adding/removing forward,
