* changed structural elements of test 20/43 for better overview (Bug #31792)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49126 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.164-26) unstable; urgency=low
+
+  * changed structural elements of test 20/43 for better overview (Bug #31792)
+
+ -- Drees Dormann <dormann@univention.de>  Mon, 07 Apr 2014 16:18:41 +0200
+
 ucs-test (4.0.164-25) unstable; urgency=medium
 
   * Fix 41samba-tool_user_password_change (Bug #34447)
