--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.164-27) unstable; urgency=medium
+
+  * Keep samba password policy settings adjustment in 41samba-tool_user_*
+    (Bug #34447)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 07 Apr 2014 16:42:29 +0200
+
 ucs-test (4.0.164-26) unstable; urgency=low
 
   * changed structural elements of test 20/43 for better overview (Bug #31792)
@@ -7,7 +14,7 @@ ucs-test (4.0.164-26) unstable; urgency=low
 ucs-test (4.0.164-25) unstable; urgency=medium
 
   * Fix 41samba-tool_user_password_change (Bug #34447)
-  * Don't modifiy samba password policy settings in 41samba-tool_user_*
+  * Don't modify samba password policy settings in 41samba-tool_user_*
   * force_drs_replication: NOP if destination == source
 
  -- Arvid Requate <requate@univention.de>  Mon, 07 Apr 2014 15:00:57 +0200
