--- a/services/univention-squid-kerberos/debian/changelog
+++ b/services/univention-squid-kerberos/debian/changelog
@@ -1,3 +1,9 @@
+univention-squid-kerberos (3.0.2-4) unstable; urgency=low
+
+  * modify sp account if already existing (Bug #33779) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 08 Apr 2014 12:04:15 +0200
+
 univention-squid-kerberos (3.0.2-3) unstable; urgency=low
 
   * added saltPrincipal to samba4 keytab (secrets.ldb) (Bug #32292) 
