made made squid/redirect a bit more flexible (Bug #32429)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49149 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-squid/debian/changelog
+++ b/services/univention-squid/debian/changelog
@@ -1,3 +1,9 @@
+univention-squid (7.0.3-5) unstable; urgency=low
+
+  * made made squid/redirect a bit more flexible (Bug #32429) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 08 Apr 2014 12:07:40 +0200
+
 univention-squid (7.0.3-4) unstable; urgency=low
 
   * made made squid/redirect a bit more flexible (Bug #32429)
