--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.164-28) unstable; urgency=low
+
+  * fixed traceback when trying to terminate UDM CLI server 
+  (Bug #34348)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 08 Apr 2014 12:02:26 +0200
+
 ucs-test (4.0.164-27) unstable; urgency=medium
 
   * Keep samba password policy settings adjustment in 41samba-tool_user_*
