--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test (4.0.164-29) unstable; urgency=low
+
+  * when the UDM CLI server could not be terminated because it was
+    not running anymore, log this issue
+  (Bug #34348)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 08 Apr 2014 13:05:12 +0200
+
 ucs-test (4.0.164-28) unstable; urgency=low
 
   * fixed traceback when trying to terminate UDM CLI server 
