Bug #29420 DevDoc: Listener apply QA changes 3
Correct ldap/server/addition.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49159 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/doc/univention-directory-listener.8
+++ b/management/univention-directory-listener/doc/univention-directory-listener.8
@@ -121,7 +121,7 @@ Space separated list of LDAP server host names used by all roles expect domainco
 Host name of the LDAP server for domaincontroller_masters, backups and all other roles.
 .TP
 .BR notifier/server/port
-TCP port number of the notifier service. Default: \fB
+TCP port number of the notifier service. Default: \fB6669\fP.
 .TP
 .BR ldap/master/port ,\  ldap/backup/port
 TCP port number of the LDAP servers on domaincontroller_masters and backups.
