fixed typo (Bug #33843)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49160 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-25) unstable; urgency=low
+
+  * fixed typo (Bug #33843)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 08 Apr 2014 13:34:35 +0200
+
 univention-directory-manager-modules (9.0.75-24) unstable; urgency=low
 
   * version bump (Bug #33843)
