--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.164-27.1) unstable; urgency=low
+
+  * 00_base/96rename_domain_admins: ignore slapd.conf check on
+    memberserver (Bug #34201)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 08 Apr 2014 13:39:57 +0200
+
 ucs-test (4.0.164-29) unstable; urgency=low
 
   * when the UDM CLI server could not be terminated because it was
