* resync the udm_extension listener during this update to make it   generate the registration files for update-python-modules (Bug #34421).
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49169 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.75-26) unstable; urgency=medium
+
+  * resync the udm_extension listener during this update to make it
+    generate the registration files for update-python-modules (Bug #34421).
+
+ -- Arvid Requate <requate@univention.de>  Tue, 08 Apr 2014 15:07:43 +0200
+
 univention-directory-manager-modules (9.0.75-25) unstable; urgency=low
 
   * fixed typo (Bug #33843)
