Update 60_umc-system/10_umc-service-list (Bug #34445) Returning RESUT_SKIP if cannot get UCR vars; More debug output; Splited in order to ease re-use.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49170 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.164-30) unstable; urgency=low
+
+  * Update 60_umc-system/10_umc-service-list (Bug #34445)
+
+ -- Dmitry Galkin <dgalkin@univention.de>  Tue, 08 Apr 2014 15:00:03 +0200
+
 ucs-test (4.0.164-27.1) unstable; urgency=low
 
   * 00_base/96rename_domain_admins: ignore slapd.conf check on
