--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-adtakeover (1.0.10-17) unstable; urgency=medium
+
+  * Check the ldap bases (Bug #34139)
+  * Check GPO file version against container version
+
+ -- Arvid Requate <requate@univention.de>  Tue, 08 Apr 2014 17:42:29 +0200
+
 univention-management-console-module-adtakeover (1.0.10-16) unstable; urgency=low
 
   * Bug #34019: Better handling of license validation errors
