--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-listener (8.0.0-6) unstable; urgency=medium
+
+  * Adjust listener resync shutdown message (Bug #32605)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 08 Apr 2014 18:16:42 +0200
+
 univention-directory-listener (8.0.0-5) unstable; urgency=medium
 
   * Always run replication handler, fixing boolean logic twist in patch
