--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -2,6 +2,7 @@ ucs-test (4.0.164-33) unstable; urgency=low
 
   * Fix file permissions (Bug #34510)
   * 00/47faillog_account-smb-krb: Use test runner.
+  * Update copyright.
 
  -- Philipp Hahn <hahn@univention.de>  Wed, 09 Apr 2014 10:23:58 +0200
 
