--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-adtakeover (1.0.10-18) unstable; urgency=medium
+
+  * Remove conflicting GPO objects from LDAP before starting the Connector
+    (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 09 Apr 2014 12:39:32 +0200
+
 univention-management-console-module-adtakeover (1.0.10-17) unstable; urgency=medium
 
   * Check the ldap bases (Bug #34139)
