--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-19) unstable; urgency=medium
+
+  * fix typo (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 09 Apr 2014 13:01:15 +0200
+
 univention-management-console-module-adtakeover (1.0.10-18) unstable; urgency=medium
 
   * Remove conflicting GPO objects from LDAP before starting the Connector
