--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-adtakeover (1.0.10-20) unstable; urgency=medium
+
+  * Add msDS-Behavior-Version check for Windows Server 2012
+  * Update translations (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 09 Apr 2014 13:22:31 +0200
+
 univention-management-console-module-adtakeover (1.0.10-19) unstable; urgency=medium
 
   * fix typo (Bug #34139)
