* fix translation file (Bug #34139)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49213 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-22) unstable; urgency=medium
+
+  * fix translation file (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 09 Apr 2014 15:21:34 +0200
+
 univention-management-console-module-adtakeover (1.0.10-21) unstable; urgency=medium
 
   * fix parsing of msds-Behavior-Version (Bug #34139)
