--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.164-34) unstable; urgency=medium
+
+  * Add a test checking for objects without samba4 objectclass
+    and run it at the end of everything (Bug #34518)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 09 Apr 2014 17:09:01 +0200
+
 ucs-test (4.0.164-33) unstable; urgency=low
 
   * Fix file permissions (Bug #34510)
