* Adjust error message for clock sync (Bug #34139)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49221 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/umc/python/adtakeover/de.po
+++ b/management/univention-management-console-module-adtakeover/umc/python/adtakeover/de.po
@@ -265,10 +265,11 @@ msgstr ""
 #, python-format
 msgid ""
 "Remote clock is behind local clock by more than %s seconds, refusing to turn "
-"back time."
+"back time. Please advance the clock of the Active Directory DC."
 msgstr ""
 "Die Uhr des Active Directory Servers liegt hinter der lokalen Zeit um mehr "
-"als %s Sekunden zurück. Die lokale Zeit kann nicht zurückgestellt werden."
+"als %s Sekunden zurück. Die lokale Zeit kann nicht zurückgestellt werden. "
+"Bitte stellen Sie die Zeit am Active Directory DC vor."
 
 #: takeover.py:790
 #, python-format
