--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-23) unstable; urgency=medium
+
+  * Adjust error message for clock sync (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 09 Apr 2014 17:13:26 +0200
+
 univention-management-console-module-adtakeover (1.0.10-22) unstable; urgency=medium
 
   * fix translation file (Bug #34139)
