--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-adtakeover (1.0.10-24) unstable; urgency=medium
+
+  * Fix setting univention/ad/takeover/completed=yes (Bug #34139)
+  * And cleanup_join
+
+ -- Arvid Requate <requate@univention.de>  Wed, 09 Apr 2014 18:05:58 +0200
+
 univention-management-console-module-adtakeover (1.0.10-23) unstable; urgency=medium
 
   * Adjust error message for clock sync (Bug #34139)
