* Build only for Python 2.6 (Bug #31320)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49234 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -2,8 +2,9 @@ univention-s4-connector (8.0.33-33) unstable; urgency=low
 
   * Prevent multiple S4 connector instances (Bug #34410)
   * The pcpatch user is no longer be ignored by default (Bug #34394)
+  * Build only for Python 2.6 (Bug #31320)
 
- -- Stefan Gohmann <gohmann@univention.de>  Thu, 10 Apr 2014 10:06:24 +0200
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 10 Apr 2014 10:08:52 +0200
 
 univention-s4-connector (8.0.33-32) unstable; urgency=low
 
