--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-25) unstable; urgency=medium
+
+  * Translate another message (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 10 Apr 2014 11:35:13 +0200
+
 univention-management-console-module-adtakeover (1.0.10-24) unstable; urgency=medium
 
   * Fix setting univention/ad/takeover/completed=yes (Bug #34139)
