* Check on remote master as well (Bug #34518)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49241 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.164-35) unstable; urgency=medium
+
+  * Check on remote master as well (Bug #34518)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 10 Apr 2014 12:51:04 +0200
+
 ucs-test (4.0.164-34) unstable; urgency=medium
 
   * Add a test checking for objects without samba4 objectclass
