--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -2,8 +2,9 @@ ucs-test (4.0.164-36) unstable; urgency=low
 
   *Added missing line in "Packages:" "- univention-s4-connector" for all
    52/176* tests (Bug #31324)
+  *skipped 52/176* ttl and txt tests because of known bugs
 
- -- Drees Dormann <dormann@univention.de>  Thu, 10 Apr 2014 12:54:42 +0200
+ -- Drees Dormann <dormann@univention.de>  Thu, 10 Apr 2014 15:33:37 +0200
 
 ucs-test (4.0.164-35) unstable; urgency=medium
 
