Bug #34406 LDAP: Sort schema files by name
Guarantee stable order for packages providing multiple LDAP schema
extension.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49270 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-24) unstable; urgency=low
+
+  * Sort schema files by name (Bug #34406)
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 11 Apr 2014 08:52:45 +0200
+
 univention-ldap (10.0.17-23) unstable; urgency=medium
 
   * Turn well-known-sid-name-mapping.d hook into python code (Bug #33890)
